--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
   </div>
 
   <footer class="bg-dark text-white text-center py-3">
-    <p class="mb-0">© 2025 - Proyecto Supabase + Vercel | Hecho por Sofía Tapia 💻</p>
+    <p class="mb-0">© 2025 - Proyecto Supabase + Vercel | Hecho por Carolina Tapia 💻</p>
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
