Cambie el video por publicidad

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
     <div id="productos" class="row justify-content-center"></div>
 
     <div id="iframe" class="text-center my-5">
-      <h2>🎥 Video de ejemplo</h2>
+      <h3>Consegui nuestros accesorios en Abasto Shopping</h3>
       <iframe width="560" height="315" 
-        src="https://www.youtube.com/embed/VYOjWnS4cMY" 
-        title="Video de ejemplo"
+        src="https://youtu.be/JDX09iCJbaw?si=H9LsuEXFNJCrqnhD" 
+        title="Consegui nuestros accesorios en Abasto Shopping"
         frameborder="0"
         allowfullscreen>
       </iframe>
