--- a/index.html
+++ b/index.html
@@ -41,16 +41,18 @@
 
     <div id="productos" class="row justify-content-center"></div>
 
-    <div id="iframe" class="text-center my-5">
-      <h3>Consegui nuestros accesorios en Abasto Shopping</h3>
-      <iframe width="560" height="315" 
-        src="https://youtu.be/JDX09iCJbaw?si=H9LsuEXFNJCrqnhD" 
-        title="Consegui nuestros accesorios en Abasto Shopping"
-        frameborder="0"
-        allowfullscreen>
-      </iframe>
-    </div>
-  </div>
+     <div id="iframe" class="text-center my-5">
+      <h2> Publicidad </h2>
+       <iframe width="560" height="315" 
+       src="https://www.youtube.com/embed/oQTYxeZMbpc?si=v95h7XUReTjA6rTm" 
+       title="YouTube video player" 
+       frameborder="0" 
+       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+       referrerpolicy="strict-origin-when-cross-origin" 
+       allowfullscreen>
+       </iframe>
+     </div>
+   </div>
 
   <footer class="bg-dark text-white text-center py-3">
     <p class="mb-0">© 2025 - Proyecto Supabase + Vercel | Hecho por Carolina Tapia 💻</p>
